<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_0"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/pink">
        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>
    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/btn_count_days"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/count_days"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="250dp"
        android:background="@drawable/button_style_0"/>
    <Button
        android:id="@+id/btn_count_blessings"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/count_blessings"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:background="@drawable/button_style_0"/>
    <Button
        android:id="@+id/btn_about_us"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/about_us"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:background="@drawable/button_style_0"/>
    <Button
        android:id="@+id/btn_exit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:background="@drawable/button_style_0"/>

</LinearLayout>